--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
         "drupal/console" : "1.0.0-beta5"
      },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "autoload": {
+        "psr-4": {"VM\\Console\\": "src"}
+    }
 }
 
