--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "type": "project",
     "license": "GPL-2.0+",
     "require": {
-        "drupal/console-core" : "^1.0"
+	"drupal/console" : "1.0.0-beta5"
      },
     "minimum-stability": "dev",
     "prefer-stable": true,
