--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,6 @@
   },
   "require": {
     "drupal/console": "1.0.0-beta5",
-    "dennisdigital/drupal_console_commands": "dev-master"
+    "dennisdigital/drupal_console_commands": "0.1"
   }
 }
