--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
   "prefer-stable": true,
   "scripts": {
     "post-create-project-cmd": [
-      "ls -al",
-      "sudo ln -s ~/.config/composer/dev_scripts/vendor/drupal/console/bin/drupal /usr/local/bin/drupal",
+      "sudo ln -s vendor/bin/drupal /usr/local/bin/drupal",
       "drupal init",
       "cat ~/.config/composer/dev_scripts/vendor/dennisdigital/drupal_console_commands/config.yml >> ~/.console/config.yml",
       "drupal chain --file=~/.config/composer/vendor/dennisdigital/dev_scripts/scripts/post-update.yml"
