--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,7 @@
   "prefer-stable": true,
   "scripts": {
     "post-create-project-cmd": [
-      "if [ -L /usr/local/bin/drupal ]; then sudo rm /usr/local/bin/drupal; fi",
-      "sudo ln -s ./vendor/bin/drupal /usr/local/bin/drupal",
-      "drupal init",
-      "cat ./vendor/dennisdigital/drupal_console_commands/config.yml >> ~/.console/config.yml",
+      "./scripts/post-create-project.sh"
       "drupal chain --file=./vendor/dennisdigital/dev_scripts/scripts/post-update.yml"
     ]
   },
