--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,8 @@
     ]
   },
   "require": {
-    "drupal/console-core": "^1.0@RC",
-    "drupal/console-launcher": "^1.0@RC",
+    "drupal/console-core": "^1.0",
+    "drupal/console-launcher": "^1.0",
     "dennisdigital/drupal_console_commands": "0.16"
   }
 }
