--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     ]
   },
   "require": {
+    "drupal/core": "8.x",
     "drupal/console-core": "^1.0",
     "drupal/console-launcher": "^1.0",
     "dennisdigital/drupal_console_commands": "0.16"
