--- a/composer.json
+++ b/composer.json
@@ -32,9 +32,9 @@
   "_comment 1": "https://github.com/hechoendrupal/DrupalConsole/issues/2825",
   "_comment 2": "drupal/console-core: ^1.0",
   "_comment 3": "drupal/console-launcher: ^1.0",
+  "_comment 4": "Temporarily using a fork of console",
   "require": {
-    "drupal/core": "8.x",
     "marcelovani/console": "dev-master",
-    "dennisdigital/drupal_console_commands": "0.17"
+    "dennisdigital/drupal_console_commands": "0.18"
   }
 }
